Added fixes for macOS menu bar