@@ -1,3 +1,5 @@
+import org.apache.tools.ant.taskdefs.condition.Os
+
 plugins {
     id 'java'
     id 'idea'
@@ -15,9 +17,11 @@ repositories {
 }
 
 task exportToRelease {
-    copy {
-        from 'build/libs/Cardr-' + version + '.jar'
-        into "C:\\Users\\vgsoh\\Cardr"
+    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        copy {
+            from 'build/libs/Cardr-' + version + '.jar'
+            into "C:\\Users\\vgsoh\\Cardr"
+        }
     }
 }
 
@@ -26,42 +30,57 @@ idea {
 }
 
 jar {
-    manifest { attributes 'Main-Class': mainClassName }
+    manifest { attributes 'Main-Class': mainClassName, 'Add-Exports': 'javafx.graphics/com.sun.javafx.tk' }
 }
 
 javafx {
-    modules = [ 'javafx.controls', 'javafx.base', 'javafx.web' ]
+    modules = [ 'javafx.controls', 'javafx.base', 'javafx.web', 'javafx.fxml' ]
 }
 
 jlink {
+    addExtraDependencies("javafx")
     //noinspection GroovyAssignabilityCheck, GrFinalVariableAccess, GroovyAccessibility
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         name = 'cardr'
-        jvmArgs = [ '-Djava.library.path="dlls"' ]
+        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+            jvmArgs = ['-Djava.library.path="dlls"']
+        } else {
+            jvmArgs = [
+                    '--add-exports', 'javafx.graphics/com.sun.javafx.tk=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.javafx.tk=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.glass.ui=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.glass.ui.mac=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.javafx.menu=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.controls/com.sun.javafx.scene.control=me.sohamgovande.cardr.merged.module',
+            ]
+        }
     }
 
     forceMerge 'commons-exec'
     forceMerge 'log4j-api'
 
     jpackageImage.doLast {
-        def dllFolder = new File('build/jpackage/CardrLauncher/dlls')
-        dllFolder.mkdirs()
+        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+            def dllFolder = new File('build/jpackage/CardrLauncher/dlls')
+            dllFolder.mkdirs()
 
-        copy {
-            from '..\\CardrWindowsCPP\\bin\\Release\\NativeDllInterface\\Win32'
-            into "build/jpackage/cardr/dlls"
-            include "*.dll"
-        }
-        copy {
-            from '..\\CardrWindowsCPP\\bin\\Release\\NativeDllInterface\\x64'
-            into "build/jpackage/cardr/dlls"
-            include "*.dll"
-        }
-        copy {
-            from 'C:\\program files\\java\\jre1.8.0_211\\lib\\security'
-            into 'build/jpackage/cardr/runtime/lib/security'
-            include "cacerts"
+            copy {
+                from '..\\CardrWindowsCPP\\bin\\Release\\NativeDllInterface\\Win32'
+                into "build/jpackage/cardr/dlls"
+                include "*.dll"
+            }
+            copy {
+                from '..\\CardrWindowsCPP\\bin\\Release\\NativeDllInterface\\x64'
+                into "build/jpackage/cardr/dlls"
+                include "*.dll"
+            }
+            copy {
+                from 'C:\\program files\\java\\jre1.8.0_211\\lib\\security'
+                into 'build/jpackage/cardr/runtime/lib/security'
+                include "cacerts"
+            }
         }
     }
 
@@ -73,7 +92,19 @@ jlink {
                 '--icon', appWindowsICO
         ]
 
-        jvmArgs = [ '-Djava.library.path="dlls"' ]
+        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+            jvmArgs = ['-Djava.library.path="dlls"']
+        } else {
+            jvmArgs = [
+                    '--add-exports', 'javafx.graphics/com.sun.javafx.tk=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.javafx.tk=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.glass.ui=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.glass.ui.mac=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.graphics/com.sun.javafx.menu=me.sohamgovande.cardr.merged.module',
+                    '--add-opens', 'javafx.controls/com.sun.javafx.scene.control=me.sohamgovande.cardr.merged.module',
+            ]
+        }
 
         installerOptions = [
                 '--type', 'msi',
